--- a/templates/layouts/tail.html
+++ b/templates/layouts/tail.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <p>Made by <a href="http://twitter.com/richardiii">@richardiii</a></p>
+  <p>Made by <a href="http://rtorr.com">rtorr</a></p>
 </div>
 </body>
 </html>
