--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,12 @@
 <div class="container">
   <p>Welcome to jsbundler! You can bundle up npm packages and use them in the browser!</p>
   <p>Check out an example <a href="/package/amp-merge">/package/amp-merge</a></p>
+  <div class="plans">
+    <h3>Future plans:</h3>
+    <ul>
+      <li>Input npm package name, get back package instead of manually putting it in the url</li>
+      <li>Show previous built versions</li>
+    </ul>
+  </div>
 </div>
 <% include layouts/tail.html %>
