--- a/templates/layouts/head.html
+++ b/templates/layouts/head.html
@@ -10,5 +10,5 @@
 </head>
 <body>
 <div class="container">
-  <h1><a href="/">jsbundler</a></h1>
+  <h1><a class="logo" href="/">jsbundler</a></h1>
 </div>
