--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,7 +25,7 @@ a:hover {
 .logo {
   display: block;
   margin: 0 auto;
-  background: url('/public/images/logo.svg') center;
+  background: url('/public/images/logo.jpg') center no-repeat;
   background-size: 100px 100px;
   height: 100px;
   width: 100px;
