--- a/templates/layouts/head.html
+++ b/templates/layouts/head.html
@@ -11,4 +11,10 @@
 <body>
 <div class="container">
   <h1><a class="logo" href="/">jsbundler</a></h1>
+  <div class="hero">
+    <p>Bundle npm packages and use them in the browser!</p>
+    <form name="bundle_npm_package" action="/package" method="post">
+      <input id="bundle_npm_package_input" name="bundle_npm_package_input" type="text" placeholder="npm package"> <input id="bundle_npm_package_submit" type="submit">
+    </form>
+  </div>
 </div>
