--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,15 @@
 <% include layouts/head.html %>
 <div class="container">
-  <p>Welcome to jsbundler! You can bundle up npm packages and use them in the browser!</p>
-  <p>Check out an example <a href="/package/amp-merge">/package/amp-merge</a></p>
+  <div class="examples">
+    <h3>Exaples:</h3>
+    <ul>
+      <li><a href="/package/react">/package/react</a></li>
+      <li><a href="/package/react-dom">/package/react-dom</a></li>
+      <li><a href="/package/jquery">/package/jquery</a></li>
+      <li><a href="/package/backbone">/package/backbone</a></li>
+      <li><a href="/package/underscore">/package/underscore</a></li>
+    </ul>
+  </div>
   <div class="plans">
     <h3>Future plans:</h3>
     <ul>
