--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,10 @@
       <li><a href="/package/underscore">/package/underscore</a></li>
     </ul>
   </div>
+  <div class="codepen">
+    <iframe width="49%" height="200" scrolling="no" src="http://codepen.io/rtorr/embed/dYLaXj" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <iframe width="49%" height="200" scrolling="no" src="http://codepen.io/rtorr/embed/RWOvRE" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+  </div>
   <div class="plans">
     <h3>Future plans:</h3>
     <ul>
