--- a/templates/layouts/tail.html
+++ b/templates/layouts/tail.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <p>Made by <a href="http://rtorr.com">rtorr</a></p>
+  <p><em>© 2015 jsbundler</em></p>
 </div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
