--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,8 @@
     </ul>
   </div>
   <div class="codepen">
-    <iframe width="49%" height="200" scrolling="no" src="http://codepen.io/rtorr/embed/dYLaXj" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-    <iframe width="49%" height="200" scrolling="no" src="http://codepen.io/rtorr/embed/RWOvRE" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-  </div>
-  <div class="plans">
-    <h3>Future plans:</h3>
-    <ul>
-      <li>Input npm package name, get back package instead of manually putting it in the url</li>
-      <li>Show previous built versions</li>
-    </ul>
+    <iframe width="49%" height="200" scrolling="no" src="https://codepen.io/rtorr/embed/dYLaXj" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <iframe width="49%" height="200" scrolling="no" src="https://codepen.io/rtorr/embed/RWOvRE" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
   </div>
 </div>
 <% include layouts/tail.html %>
